# temporalci

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  distributed-recovery-e2e.yml  quality-gate.yml  sprt-smoke.yml  svd-regression-gate-demo.yml  temporalci.yml
docs/: autopilot_runbook.md  distributed_recovery_runbook.md
docs/proofs/: distributed_recovery_e2e_20260213.md
examples/: catenary_inspection.yaml  catenary_multicam.yaml  catenary_seasonal_demo.yaml  regression_core.yaml  regression_core_degraded.yaml  regression_sprt.yaml  safetybench_prompt_source.yaml  svd_regression.yaml  svd_regression_degraded.yaml  svd_regression_fast.yaml  svd_regression_fast_degraded.yaml
infra/: Dockerfile.coordinator  docker-compose.yml
scripts/: __init__.py  autopilot_96h.py  autopilot_summary.py  autopilot_telemetry.py  calibrate_sprt.py  check_autopilot_health.py  demo_full_pipeline.py  distributed_recovery_e2e.py  export_onnx.py  extract_frames.py  launch_autopilot_background.py  run_regression_gate_demo.py  smoke_distributed_e2e.py  stop_autopilot_background.py  trend_report.py
temporalci/: __main__.py  _cli_impl.py  autopilot_utils.py  badge.py  baseline.py  cli.py  compare.py  config.py  constants.py  dashboard.py  engine.py  errors.py  export.py  fusion.py  gate_eval.py  heatmap.py  index.py  inspection_report.py  prompt_sources.py  prune.py  report.py  route_map.py  server.py  sprt.py  sprt_calibration.py  temporal_diff.py  trend.py  types.py  utils.py
temporalci/adapters/: __init__.py  base.py  diffusers_img2vid.py  frame_archive.py  http.py  mock.py
temporalci/contracts/: campaign.py
temporalci/coordinator/: app.py  (+6 more)
tests/: test_anomaly.py  test_artifacts_policy.py  test_autopilot_health_repair.py  test_autopilot_summary.py  test_autopilot_telemetry.py  test_autopilot_tools.py  test_autopilot_utils.py  test_badge.py  test_baseline.py  test_calibrate_sprt.py  test_campaign_artifact_service.py  test_campaign_contracts.py  test_catenary_e2e.py  test_catenary_metric.py  test_catenary_ml_metric.py  test_cli.py  test_compare.py  test_config_paths.py  test_config_validation.py  test_coordinator_app.py  test_coordinator_cli.py  test_coordinator_cli_module.py  test_coordinator_config.py  test_coordinator_requeue_logic.py  test_coordinator_worker.py  test_demo_pipeline.py  test_diffusers_adapter_config.py  test_directory_prompt_source.py  test_distributed_recovery_e2e.py  test_engine_artifact_hints.py  test_engine_helpers.py  test_errors.py  test_export.py  test_frame_archive_adapter.py  test_fusion.py  test_gate_eval.py  test_heatmap.py  test_http_adapter.py  test_index.py  test_inspection_report.py  (+18 more)
tools/: generate_demo_assets.py  numbered_cat.py  remove_tree.py
(+19 files in other folders)
