[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temporalci"
version = "0.1.0"
description = "TemporalCI MVP: video model regression and safety gate runner"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
temporalci = "temporalci.cli:main"
temporalci-distributed = "temporalci.coordinator.cli:main"

[project.optional-dependencies]
diffusers = [
  "diffusers>=0.30",
  "Pillow>=10.0",
  "numpy>=1.26",
  "peft>=0.17.0",
]
official-benchmarks = [
  "vbench>=0.1.5",
]
distributed = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "psycopg[binary]>=3.2",
  "redis>=5.0",
  "boto3>=1.35",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.6.0",
  "types-PyYAML>=6.0.12.20241230",
  "pre-commit>=4.0",
]

[tool.setuptools]
packages = [
  "temporalci",
  "temporalci.adapters",
  "temporalci.metrics",
  "temporalci.coordinator",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true
exclude = ["vendor/", "artifacts/"]

[[tool.mypy.overrides]]
module = "rdkit.*"
follow_imports = "skip"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: requires heavy/optional dependencies and external assets",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
  "vendor",
  "artifacts",
  ".claude",
]
